--- a/ng-app/app/index.html
+++ b/ng-app/app/index.html
@@ -22,12 +22,15 @@
 			<!-- Tweets inside this frame -->
 			<div class="col-lg-4" id="tweet-frame">
 				<div class="tweetCard" data-ng-repeat="tweet in cf.tweetPage(currentPage, pageSize, sortModel)"
-				data-tweet="tweet"></div>
+				data-tweet="tweet">
+
 			</div>
 		</div>
 	</div>
+</div>
 
-	<script type="text/javascript" src="scripts/jquery-1.10.2.min.js"></script>
-	<script type="text/javascript" src="scripts/angular.min.js"></script>
+<script type="text/javascript" src="scripts/jquery-1.10.2.min.js"></script>
+<script type="text/javascript" src="scripts/angular.min.js"></script>
+<script type="text/javascript" src="scripts/app.js"></script>
 </body>
 </html>
