--- a/ng-app/app/index.html
+++ b/ng-app/app/index.html
@@ -32,5 +32,6 @@
 <script type="text/javascript" src="scripts/jquery-1.10.2.min.js"></script>
 <script type="text/javascript" src="scripts/angular.min.js"></script>
 <script type="text/javascript" src="scripts/app.js"></script>
+<script type="text/javascript" src="scripts/controllers.js"></script>
 </body>
 </html>
