--- a/ng-app/app/index.html
+++ b/ng-app/app/index.html
@@ -15,7 +15,7 @@
 </head>
 <body ng-app="tweeplus">
 
-	<div ng-controller="tweeplusCtrl">
+	<div ng-controller="tweeplusCtrl" ng-init="init()">
 
 		<!-- Main page layout -->
 		<div class="row">
@@ -33,5 +33,6 @@
 <script type="text/javascript" src="scripts/angular.min.js"></script>
 <script type="text/javascript" src="scripts/app.js"></script>
 <script type="text/javascript" src="scripts/controllers.js"></script>
+<script type="text/javascript" src="scripts/services/tweets.js"></script>
 </body>
 </html>
