--- a/ng-app/app/index.html
+++ b/ng-app/app/index.html
@@ -15,7 +15,12 @@
 </head>
 <body ng-app="tweeplus">
 
-	<div ng-controller="tweeplusCtrl" ng-init="init()">
+	<div ng-controller="tweeplusCtrl">
+		<ul>
+			<li ng-repeat="post in posts">
+				<h3>{{post.tweet}} <small>({{post.word}})</small></h3>
+			</li>
+		</ul>
 		<div>
 			<label>Name:</label>
 			<input type="text" ng-model="yourName" placeholder="Enter a name here">
@@ -24,7 +29,7 @@
 		</div>
 		<!-- Main page layout -->
 		<div class="row">
-			 <h1>Message: {{message}}</h1>
+			<h1>Message: {{message}}</h1>
 			<!-- Tweets inside this frame -->
 			<div class="col-lg-4" id="tweet-frame">
 				<div class="tweetCard" data-ng-repeat="tweet in cf.tweetPage(currentPage, pageSize, sortModel)"
@@ -35,10 +40,10 @@
 	</div>
 </div>
 
-<script type="text/javascript" src="scripts/jquery-1.10.2.min.js"></script>
 <script type="text/javascript" src="scripts/angular.min.js"></script>
+<script type="text/javascript" src="scripts/angular-resource.min.js"></script>
+<script type="text/javascript" src="scripts/jquery-1.10.2.min.js"></script>
 <script type="text/javascript" src="scripts/app.js"></script>
-<script type="text/javascript" src="scripts/controllers.js"></script>
 <script type="text/javascript" src="scripts/services/tweets.js"></script>
 </body>
 </html>
