--- a/ng-app/app/index.html
+++ b/ng-app/app/index.html
@@ -10,36 +10,44 @@
 	<meta name="description" content="">
 	<meta name="viewport" content="width=device-width">
 	<title>Tweeplus</title>
-	<link rel="stylesheet" media="screen" href="styles/bootstrap.min.css"/>
+	<link rel="stylesheet" media="screen" href="styles/bootstrap.css"/>
 	<link rel="stylesheet" media="screen" href="styles/app.css"/>
 </head>
 <body ng-app="tweeplus">
+	<div class="navbar">
+		<div class="container">
 
-	<div ng-controller="tweeplusCtrl">
-		<ul>
-			<li ng-repeat="post in posts">
-				<h3>{{post.tweet}} <small>({{post.word}})</small></h3>
-			</li>
-		</ul>
-		<div>
-			<label>Name:</label>
-			<input type="text" ng-model="yourName" placeholder="Enter a name here">
-			<hr>
-			<h1>Hello {{yourName}}!</h1>
+			<span class="navbar-brand">Tweeplus</span>
+
+
+
 		</div>
+	</div>
+	<div ng-controller="tweeplusCtrl">
+		
+		
 		<!-- Main page layout -->
 		<div class="row">
-			<h1>Message: {{message}}</h1>
+			
 			<!-- Tweets inside this frame -->
-			<div class="col-lg-4" id="tweet-frame">
-				<div class="tweetCard" data-ng-repeat="tweet in cf.tweetPage(currentPage, pageSize, sortModel)"
-				data-tweet="tweet">
-
+			<div class="col-lg-5" id="tweet-frame">
+				<div ng-repeat="post in posts">
+					<div class="tweet">
+						<span>{{post.tweet}}</span>
+					</div>
+					<span class="username_screen">{{post.word}}</span>
+				</div>
+				
 			</div>
 		</div>
 	</div>
 </div>
-
+<div>
+	<label>Name:</label>
+	<input type="text" ng-model="yourName" placeholder="Enter a name here">
+	<hr>
+	<h1>Hello {{yourName}}!</h1>
+</div>
 <script type="text/javascript" src="scripts/angular.min.js"></script>
 <script type="text/javascript" src="scripts/angular-resource.min.js"></script>
 <script type="text/javascript" src="scripts/jquery-1.10.2.min.js"></script>
