--- a/ng-app/app/index.html
+++ b/ng-app/app/index.html
@@ -19,19 +19,13 @@
 		<!-- navbar start -->
 		<div class="navbar">
 			<div class="container">
-
 				<span class="navbar-brand">Tweeplus</span>
-
-
-
 			</div>
 		</div>
 		<!-- navbar end -->
 		<div class="container container-fluid">
-
-			<!-- Tweet feeds -->
+			<!-- row 1 -->
 			<div class="row">
-
 				<!-- Tweets inside this frame -->
 				<div class="col-lg-5" id="tweet-frame">
 					<div ng-repeat="post in posts">
@@ -40,34 +34,33 @@
 						</div>
 						<span class="username_screen">{{post.word}}</span>
 					</div>
-
 				</div>
 			</div>
-
 			<!-- end  -->
+			<!-- row 2 -->
+			<div class="row">
+				<!-- Pagination -->
+				<pagination rotate="false" num-pages="cf.numPages(pageSize)" current-page="currentPage" max-size="12"
+				boundary-links="true"></pagination>
+				<span class="toggleLive" ng-class="live ? 'toggleActive' : ''" ng-click="toggleLive()">Live</span>
+			</div>
 		</div>
 		
-		<div class="row">
-			<!-- Pagination -->
-			<pagination rotate="false" num-pages="cf.numPages(pageSize)" current-page="currentPage" max-size="12"
-			boundary-links="true"></pagination>
-			<span class="toggleLive" ng-class="live ? 'toggleActive' : ''" ng-click="toggleLive()">Live</span>
-		</div>
+		
 
 		<!-- Main page layout -->
 		
 	</div>
-</div>
-<div>
-	<label>Name:</label>
-	<input type="text" ng-model="yourName" placeholder="Enter a name here">
-	<hr>
-	<h1>Hello {{yourName}}!</h1>
-</div>
-<script type="text/javascript" src="scripts/angular.min.js"></script>
-<script type="text/javascript" src="scripts/angular-resource.min.js"></script>
-<script type="text/javascript" src="scripts/jquery-1.10.2.min.js"></script>
-<script type="text/javascript" src="scripts/app.js"></script>
-<script type="text/javascript" src="scripts/services/tweets.js"></script>
+	<div>
+		<label>Name:</label>
+		<input type="text" ng-model="yourName" placeholder="Enter a name here">
+		<hr>
+		<h1>Hello {{yourName}}!</h1>
+	</div>
+	<script type="text/javascript" src="scripts/angular.min.js"></script>
+	<script type="text/javascript" src="scripts/angular-resource.min.js"></script>
+	<script type="text/javascript" src="scripts/jquery-1.10.2.min.js"></script>
+	<script type="text/javascript" src="scripts/app.js"></script>
+	<script type="text/javascript" src="scripts/services/tweets.js"></script>
 </body>
 </html>
