--- a/ng-app/src/index.html
+++ b/ng-app/src/index.html
@@ -10,66 +10,114 @@
 	<meta name="description" content="">
 	<meta name="viewport" content="width=device-width">
 	<title>Tweeplus</title>
-	<link rel="stylesheet" media="screen" href="styles/bootstrap.css"/>
-	<link rel="stylesheet" media="screen" href="styles/app.css"/>
+	<link rel="stylesheet" media="screen" href="bower_components/twitter/dist/css/bootstrap.min.css"/>
+	<link rel="stylesheet/less" media="screen" href="styles/app.less"/>
+	<script src="bower_components/less/dist/less-1.5.1.min.js"></script>
 </head>
 <body ng-app="tweeplus">
-	
+	<tk-element></tk-element>
 	<div ng-controller="tweeplusCtrl">
 		<!-- navbar start -->
 		<div class="navbar">
 			<div class="container">
 				<span class="navbar-brand">Tweeplus</span>
-			</div>
-		</div>
-		<!-- navbar end -->
-		<div class="container container-fluid">
-			<!-- row 1 -->
-			<div class="row">
-				<!-- Tweets inside this frame -->
-				<div class="col-lg-5" id="tweet-frame">
-					<div ng-repeat="post in posts">
-						<div class="tweet">
-							<span>{{post.tweet}}</span>
+
+				<!-- search field -->
+				<div class="navbar-form pull-left col-lg-6 input-group">
+					<form ng-submit="search()" class="input-group ng-pristine ng-valid">
+						<input type="text" class="form-control ng-pristine ng-valid" ng-model="searchText" placeholder="Example search: java (job OR jobs OR hiring)">
+						<span class="input-group-btn">
+							<button class="btn btn-primary" type="button" ng-click="search()">
+								<span class="glyphicon glyphicon-search"></span>
+							</button>
+						</span>
+					</form>
+				</div>
+				<!-- search end -->
+				<!-- Nav collapse -->
+				<div class="nav-collapse">
+
+					<!-- Tweets. Project info -->
+					<ul class="nav navbar-nav pull-right">
+						<li class="dropdown">
+							<a href="#" class="dropdown-toggle" data-toggle="dropdown">About
+								<b class="caret"></b></a>
+								<ul class="dropdown-menu">
+									<li><a href="http://matthiasnehlsen.com" target="_blank">Project Introduction</a></li>
+									<li><a href="http://matthiasnehlsen.com" target="_blank">Blog</a></li>
+									<li><a href="https://github.com/matthiasn" target="_blank">Project on GitHub</a></li>
+									<li><a href="#" ng-click="legalStuff()">Legal stuff</a></li>
+								</ul>
+							</li>
+						</ul>
+
+						<!-- Settings -->
+						<ul class="nav navbar-nav pull-right">
+							<li class="dropdown">
+								<a href="#" class="dropdown-toggle" data-toggle="dropdown">Settings
+									<b class="caret"></b></a>
+									<ul class="dropdown-menu">
+										<li><a href="#">Previous Tweets:</a></li>
+										<li>
+											<a>
+												<select class="form-control ng-pristine ng-valid" ng-model="prevSize" ng-options="p for p in prevSizeOpts"><option value="0">100</option><option value="1">500</option><option value="2">1000</option><option value="3">2000</option><option value="4" selected="selected">5000</option><option value="5">10000</option><option value="6">20000</option></select>
+											</a>
+										</li>
+										<li><hr></li>
+										<li><a href="#">Page Size:</a></li>
+										<li>
+											<a>
+												<select class="form-control ng-pristine ng-valid" ng-model="pageSize" ng-options="p for p in pageSizeOpts"><option value="0">5</option><option value="1" selected="selected">10</option><option value="2">25</option><option value="3">50</option><option value="4">100</option></select>
+											</a>
+										</li>
+									</ul>
+								</li>
+							</ul>
+
+							<div class="navbar-text col-lg-2 pull-right">Tweet count: <a>
+								<span tooltip-placement="bottom" tooltip="Tweets currently loaded" ng-bind="cf.noItems()" class="ng-binding">5873</span></a>
+							</div>
+
 						</div>
-						<span class="username_screen">{{post.word}}</span>
+						<!-- Nav end -->
 					</div>
 				</div>
-			</div>
-			<!-- end  -->
-			<!-- row 2 -->
-			<div class="row">
-				<!-- Pagination -->
-				<pagination rotate="false" num-pages="cf.numPages(pageSize)" current-page="currentPage" max-size="12"
-				boundary-links="true"></pagination>
-				<span class="toggleLive" ng-class="live ? 'toggleActive' : ''" ng-click="toggleLive()">Live</span>
-			</div>
-			<div class="btn-group">
-				<button type="button" class="btn">Sort by</button>
-				<button type="button" class="btn btn-primary" ng-model="sortModel"
-				data-btn-radio="'latest'">latest</button>
-				<button type="button" class="btn btn-primary" ng-model="sortModel"
-				data-btn-radio="'followers'">followers</button>
-				<button type="button" class="btn btn-primary" ng-model="sortModel"
-				data-btn-radio="'retweets'">retweets</button>
-			</div>
-		</div>
-		
-		
+				<!-- navbar end -->
+				<div class="container container-fluid">
 
-		<!-- Main page layout -->
-		
-	</div>
-	<div>
-		<label>Name:</label>
-		<input type="text" ng-model="yourName" placeholder="Enter a name here">
-		<hr>
-		<h1>Hello {{yourName}}!</h1>
-	</div>
-	<script type="text/javascript" src="scripts/angular.min.js"></script>
-	<script type="text/javascript" src="scripts/angular-resource.min.js"></script>
-	<script type="text/javascript" src="scripts/jquery-1.10.2.min.js"></script>
-	<script type="text/javascript" src="scripts/app.js"></script>
-	<script type="text/javascript" src="scripts/services/tweets.js"></script>
-</body>
-</html>
+					<div class="row">
+						<!-- Pagination -->
+						<pagination rotate="false" num-pages="cf.numPages(pageSize)" current-page="currentPage" max-size="12"
+						boundary-links="true"></pagination>
+						<span class="toggleLive" ng-class="live ? 'toggleActive' : ''" ng-click="toggleLive()">Live</span>
+					</div>
+					<div class="btn-group">
+						<button type="button" class="btn">Sort by</button>
+						<button type="button" class="btn btn-primary" ng-model="sortModel"
+						data-btn-radio="'latest'">latest</button>
+						<button type="button" class="btn btn-primary" ng-model="sortModel"
+						data-btn-radio="'followers'">followers</button>
+						<button type="button" class="btn btn-primary" ng-model="sortModel"
+						data-btn-radio="'retweets'">retweets</button>
+					</div>
+					<div class="row">
+						<div class="col-lg-5" id="tweet-frame">
+							<div ng-repeat="post in posts">
+								<div class="tweet">
+									<span>{{post.tweet}}</span>
+								</div>
+								<span class="username_screen">{{post.word}}</span>
+							</div>
+						</div>
+					</div>
+
+				</div>
+				<!-- Main page layout -->
+			</div>
+			<script type="text/javascript" src="bower_components/angular/angular.min.js"></script>
+			<script type="text/javascript" src="bower_components/angular/angular-resource.min.js"></script>
+			<script type="text/javascript" src="bower_components/jquery/jquery.min.js"></script>
+			<script type="text/javascript" src="scripts/app.js"></script>
+			<script type="text/javascript" src="scripts/services/tweets.js"></script>
+		</body>
+		</html>
