--- a/ng-app/src/index.html
+++ b/ng-app/src/index.html
@@ -9,7 +9,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 	<meta name="description" content="">
 	<meta name="viewport" content="width=device-width">
-	<title>Tweeplus</title>
+	<title>Tweeplus Angular</title>
 	<link rel="stylesheet" media="screen" href="bower_components/twitter/dist/css/bootstrap.min.css"/>
 	<link rel="stylesheet/less" media="screen" href="styles/app.less"/>
 	<script src="bower_components/less/dist/less-1.5.1.min.js"></script>
